--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^17.2.2",
     "express": "~4.16.1",
     "fastest-validator": "^1.19.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mysql2": "^3.15.1",
     "sequelize": "^6.37.7",
